--- a/R3MaterialDesignNavigationTransitionTemplate/Views/Transitions/Page2Box.xaml
+++ b/R3MaterialDesignNavigationTransitionTemplate/Views/Transitions/Page2Box.xaml
@@ -1,29 +1,32 @@
-﻿<UserControl x:Class="R3MaterialDesignNavigationTransitionTemplate.Views.Transitions.Page2Box"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+﻿<UserControl
+    x:Class="R3MaterialDesignNavigationTransitionTemplate.Views.Transitions.Page2Box"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:t="clr-namespace:R3MaterialDesignNavigationTransitionTemplate.Views.Transitions"
     xmlns:v="clr-namespace:R3MaterialDesignNavigationTransitionTemplate.Views"
     xmlns:vm="clr-namespace:R3MaterialDesignNavigationTransitionTemplate.ViewModels"
     xmlns:wpf="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:t="clr-namespace:R3MaterialDesignNavigationTransitionTemplate.Views.Transitions"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    Background="LightGreen"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock Text="2"/>
-        <Grid Grid.Row="1">
+        <TextBlock Text="2" />
+        <Grid Grid.Row="1" Cursor="">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="1" Command="{Binding PreviousCommand}" Content="{wpf:PackIcon Kind=ArrowLeft}"/>
-            <Button Grid.Column="2" Command="{Binding NextCommand}" Content="{wpf:PackIcon Kind=ArrowLeft}"/>
+            <Button Grid.Column="1" Margin="4,4,40,4" wpf:ElevationAssist.Elevation="Dp4" Command="{Binding PreviousCommand}" Content="{wpf:PackIcon Kind=ArrowLeft, Size=28}" Style="{StaticResource MaterialDesignFloatingActionMiniSecondaryButton}" />
+            <Button Grid.Column="2" Margin="40,4,4,4" wpf:ElevationAssist.Elevation="Dp4" Command="{Binding NextCommand}" Content="{wpf:PackIcon Kind=ArrowRight, Size=28}" Style="{StaticResource MaterialDesignFloatingActionMiniSecondaryButton}" />
         </Grid>
     </Grid>
 </UserControl>
